FIX: Use contrasting colors for help text in dark mode

--- a/classes/help-text.css
+++ b/classes/help-text.css
@@ -1,5 +1,4 @@
 .help-text {
-  color:     var(--martinique);
   font-size: smaller;
   padding:   var(--text-padding-sm);
 }
